--- a/css/common.css
+++ b/css/common.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
+@import url(nav.css);
+@import url(footer.css);
 
 *{
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
 	list-style-type: none;
+	scroll-behavior: smooth;
+	transition: var(--tran);
 }
 
 *, *::after, *::before{
@@ -15,9 +19,9 @@
 
 .container{
 	min-width: 350px;
-	max-width: 1320px;
+	max-width: 1440px;
 	margin: 0 auto;
-	padding: 0 20px;
+	padding: 0 30px;
 }
 
 input:focus{
@@ -30,6 +34,7 @@ button{
 
 
 :root{
+	--tran: all 0.5s ease;
 	--sen: 'Sen', sans-serif;
 	--inter: 'Inter', sans-serif;
 	--black: #232536;
@@ -41,6 +46,10 @@ button{
 	--white: #F4F0F8;
 	--lightyellow: #FBF6EA;
 	--buttonhover: #EDC14A;
+}
+
+img{
+	width: 100%;
 }
 
 
