--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
 @import url(nav.css);
 @import url(footer.css);
+@import url(home.css);
 
 *{
 	margin: 0;
@@ -46,6 +47,7 @@ button{
 	--white: #F4F0F8;
 	--lightyellow: #FBF6EA;
 	--buttonhover: #EDC14A;
+	--background: #E5E5E5;
 }
 
 img{
