--- a/css/common.css
+++ b/css/common.css
@@ -47,7 +47,7 @@ button{
 	--white: #F4F0F8;
 	--lightyellow: #FBF6EA;
 	--buttonhover: #EDC14A;
-	--background: #E5E5E5;
+	--background: #FFFFFF;
 }
 
 img{
