--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,3 @@
-*{
-	scrollbar-width: 0;
-
-}
-
 
 
 	
@@ -559,6 +554,10 @@ main{
     line-height: 28px;
 }
 
+.home-carousel-right{
+	overflow: hidden;
+}
+
 
 .owl-carousel h2{
 	max-width: 450px;
@@ -600,10 +599,9 @@ main{
 
 
 .owl-nav{
+	margin-top: 20px;
 	display: flex;
 	gap: 24px;
-	position: absolute;
-	right: 0;
 }
 
 .owl-nav button:hover{
@@ -661,6 +659,7 @@ main{
 }
 
 .home-join-section button a{
+	font-family: var(--sen);
 	color: var(--black);
 	font-weight: 700;
     font-size: 18px;
@@ -673,7 +672,9 @@ main{
 
 
 
-
+@media(min-width:550px){
+	
+}
 
 @media(min-width:700px){
 	.home-authors-logos{
@@ -698,14 +699,17 @@ main{
 		position: absolute;
 	}
 	.home-carousel-section{
+		padding: 90px;
 		flex-direction: inherit;
+		justify-content: space-around;
 	}
-	.owl-nav {
-		position: absolute;
-		left: 300px;
+	.home-carousel-left{
+		width: 40%;
+		padding-right: 80px;
+		border-right: 1px solid #6D6E76;;
 	}
-	.home-carousel-section {
-		gap: 100px;
+	.home-carousel-right{
+		width: 40%;
 	}
 }
 
@@ -715,6 +719,15 @@ main{
 	}
 	.home-authors-logo{
 		gap: 60px;
+	}
+}
+
+@media(min-width:1100px){
+	.owl-nav{
+		margin-top: 0;
+		position: absolute;
+		right: 0;
+		bottom: 25px;
 	}
 }
 
