--- a/css/blog.css
+++ b/css/blog.css
@@ -7,7 +7,7 @@
   text-decoration: none;
   list-style-type: none;
   scroll-behavior: smooth;
-  transition: var(--tran);
+  transition: all 0.5s ease;
 }
 
 *,
