--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,26 @@
+#backtop {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 99;
+    border: 3px solid var(--yellow);
+    outline: none;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 50px;
+    transition: 1s;
+    background-color: var(--background);
+}
+
+  #backtop a{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 0.1px;
+    color: var(--yellow);
+}
+
+
 
 
 	
@@ -656,6 +679,11 @@ main{
 	padding: 16px 48px;
 	background-color: var(--yellow);
 	border: none;
+	font-family: var(--sen);
+	color: var(--black);
+	font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
 }
 
 .home-join-section button a{
