--- a/css/nav.css
+++ b/css/nav.css
@@ -26,8 +26,8 @@ nav{
 	transition: var(--tran);
     display: block;
     position: fixed;
-    top: 0;
-	left: -100%;
+    top: -100%;
+	left: 0;
     bottom: 0;
     height: 100vh;
     width: 100%;
