--- a/css/blog.css
+++ b/css/blog.css
@@ -6,7 +6,7 @@
   padding: 0;
   text-decoration: none;
   list-style-type: none;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
   transition: all 0.5s ease;
 }
 
