--- a/css/blog.css
+++ b/css/blog.css
@@ -85,6 +85,26 @@ button {
   transition: 0.5s;
 }
 
+#backtop {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  border: 4px solid #ffd050;
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+border-radius: 50%;
+  background-color: white;
+}
+
+#backtop a{
+  font-weight: 700;
+  font-size: 24px;
+line-height: 32px;
+  color: #ffd050;
+}
+
 .toggle {
   display: none;
   margin-top: 20px;
