--- a/css/author.css
+++ b/css/author.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
 
+@import url(footer.css);
 * {
   margin: 0;
   padding: 0;
@@ -52,7 +53,7 @@ button {
   margin-top: 10px;
 }
 
-.navbar-right > .nav-link {
+.navbar-right .nav-link {
   font-family: "Inter", sans-serif;
   padding-right: 24px;
   font-weight: 400;
@@ -136,7 +137,7 @@ button {
   letter-spacing: -2px;
   color: #232536;
 }
-p {
+.logo p {
   position: absolute;
   width: 645px;
   height: 84px;
@@ -176,7 +177,7 @@ p {
   top: 886px;
   background: url(../images/author/second-image.jpg);
 }
-.card p {
+.text p {
   position: absolute;
   width: 170.44px;
   height: 20px;
@@ -205,26 +206,68 @@ h2 {
   letter-spacing: -2px;
   color: #232536;
 }
-.text p {
+.second-text p {
   position: absolute;
   width: 580px;
   height: 56px;
-  left: 652px;
+  left: 552px;
   top: 1094px;
-  
-  /* Body 1 */
-  
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
-  /* or 175% */
-  
-  
-  /* Medium grey */
-  
-  color: #6D6E76;
+  color: #6d6e76;
+}
+.second-card-image {
+  position: absolute;
+  width: 412px;
+  height: 320px;
+  left: 108px;
+  top: 1270px;
+  background: url(../images/author/third-image.jpg);
+}
+.second_text {
+  position: absolute;
+  width: 170.44px;
+  height: 20px;
+  left: 552px;
+  top: 1326px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #592ea9;
+}
+.h2 h2 {
+  position: absolute;
+  width: 560.38px;
+  height: 96px;
+  left: 552px;
+  top: 1366px;
+  font-family: "Sen";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: -2px;
+  color: #232536;
+}
+.text-p {
+  position: absolute;
+  width: 580px;
+  height: 56px;
+  left: 552px;
+  top: 1478px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #6d6e76;
 }
 @media (max-width: 1120px) {
   .navbar-right {
