--- a/css/author.css
+++ b/css/author.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
 
+@import url(nav.css);
 @import url(footer.css);
+
+
 * {
   margin: 0;
   padding: 0;
@@ -31,270 +34,207 @@ input:focus {
 button {
   cursor: pointer;
 }
-.navbar {
+
+:root {
+  --tran: all 0.5s ease;
+  --sen: "Sen", sans-serif;
+  --inter: "Inter", sans-serif;
+  --black: #232536;
+  --yellow: #ffd050;
+  --purple: #592ea9;
+  --darkgrey: #4c4c4c;
+  --grey: #6d6e76;
+  --lightgrey: #f4f4f4;
+  --white: #f4f0f8;
+  --lightyellow: #fbf6ea;
+  --buttonhover: #edc14a;
+  --background: #ffffff;
+}
+
+img {
   width: 100%;
-  height: 80px;
+}
+
+
+#backtop {
   position: fixed;
-  background: #232536;
-  z-index: 10;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  border: 4px solid var(--yellow);
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: var(--background);
 }
 
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
+#backtop a{
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  color: var(--yellow);
 }
 
-.navbar-left {
-  margin-top: 25px;
+
+header{
+  position: relative;
+  padding: 200px 0 128px;
+  background-color: var(--white);
 }
 
-.navbar-right {
-  display: flex;
-  margin-top: 10px;
-}
-
-.navbar-right .nav-link {
-  font-family: "Inter", sans-serif;
-  padding-right: 24px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  display: flex;
+.headercontainer{
+  display: grid;
   align-items: center;
-  color: #ffffff;
+  gap: 32px;
+  justify-content: space-evenly;
 }
 
-.navbar-right-button a button {
-  width: 179px;
-  height: 56px;
-  margin-left: 8px;
-  font-family: "Inter", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  border: none;
-  color: #232536;
-}
 
-.navbar-right-button a button:hover {
-  background: #ffd050;
-  transition: 0.5s;
-}
-
-.toggle {
-  display: none;
-  margin-top: 20px;
-}
-
-.toggle button {
-  width: 40px;
-  height: 40px;
-  margin-left: 10px;
-  font-size: 20px;
-  border: none;
-  color: #2e3040;
-  background: #ffffff;
-}
-
-.toggle button:hover {
-  background: #ffd050;
-  transition: 0.5s;
-}
-
-#navbar-responsive {
-  display: none;
-}
-
-.logo {
-  position: absolute;
-  width: 1440px;
-  height: 560px;
-  right: 0px;
-  top: 80px;
-  background: #f4f0f8;
-}
-.logo-image {
-  position: absolute;
-  width: 251px;
-  height: 294px;
-  right: 981px;
-  bottom: 100px;
-  background: url(../images/author/first-image.jpg);
-}
-.logo h1 {
-  position: absolute;
-  width: 669px;
-  height: 128px;
-  right: 280px;
-  top: 168px;
-  font-family: "Sen";
-  font-style: normal;
-  font-weight: 700;
+.header-right h1{
+  font-family: var(--sen);
+	color: var(--black);
+	font-weight: 700;
   font-size: 48px;
   line-height: 64px;
-  display: flex;
-  align-items: center;
+	margin-bottom: 32px;
+  max-width: 669px;
   letter-spacing: -2px;
-  color: #232536;
-}
-.logo p {
-  position: absolute;
-  width: 645px;
-  height: 84px;
-  right: 301px;
-  top: 324px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  display: flex;
-  align-items: center;
-  color: #6d6e76;
-}
-.cards {
-  display: flex;
-}
-.card h1 {
-  position: absolute;
-  width: 192px;
-  height: 64px;
-  right: 1040px;
-  top: 758px;
-  font-family: "Sen";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 64px;
-  letter-spacing: -2px;
-  color: #232536;
-}
-.card-image {
-  position: absolute;
-  width: 412px;
-  height: 320px;
-  left: 108px;
-  top: 886px;
-  background: url(../images/author/second-image.jpg);
-}
-.text p {
-  position: absolute;
-  width: 170.44px;
-  height: 20px;
-  left: 552px;
-  top: 942px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  color: #592ea9;
-}
-h2 {
-  position: absolute;
-  width: 560.38px;
-  height: 96px;
-  left: 552px;
-  top: 982px;
-  font-family: "Sen";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 48px;
-  letter-spacing: -2px;
-  color: #232536;
-}
-.second-text p {
-  position: absolute;
-  width: 580px;
-  height: 56px;
-  left: 552px;
-  top: 1094px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  color: #6d6e76;
-}
-.second-card-image {
-  position: absolute;
-  width: 412px;
-  height: 320px;
-  left: 108px;
-  top: 1270px;
-  background: url(../images/author/third-image.jpg);
-}
-.second_text {
-  position: absolute;
-  width: 170.44px;
-  height: 20px;
-  left: 552px;
-  top: 1326px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  color: #592ea9;
-}
-.h2 h2 {
-  position: absolute;
-  width: 560.38px;
-  height: 96px;
-  left: 552px;
-  top: 1366px;
-  font-family: "Sen";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 48px;
-  letter-spacing: -2px;
-  color: #232536;
-}
-.text-p {
-  position: absolute;
-  width: 580px;
-  height: 56px;
-  left: 552px;
-  top: 1478px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  color: #6d6e76;
+  margin-right: 0px;
 }
 
-@media (max-width: 1120px) {
-  .navbar-right {
-    display: none;
-  }
-  .toggle {
-    display: block;
-  }
-  #navbar-responsive {
+.header-right p{
+  max-width: 645px;
+  font-family: var(--inter);
+	color: var(--grey);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  margin: 24px 0;
+}
+
+
+.header-links{
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+
+
+
+
+
+
+
+main{
+  padding: 128px 0;
+}
+
+
+
+.maincontainer h1{
+  font-family: var(--sen);
+	color: var(--black);
+	font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+	margin-bottom: 32px;
+  max-width: 669px;
+  letter-spacing: -2px;
+}
+
+.post{
     display: grid;
-    justify-content: center;
-    position: fixed;
-    margin-top: 80px;
-    top: -100%;
-    bottom: 0;
-    height: 30vh;
-    width: 100%;
-    background-color: #232536;
-    transition: 0.5s;
+    align-items: center;
+    gap: 32px;
+    justify-content: space-evenly;
+}
+
+.p2{
+  margin-top: 64px;
+}
+
+.post-right h1{
+  font-family: var(--sen);
+	color: var(--black);
+	font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+	margin-bottom: 32px;
+  max-width: 550px;
+  letter-spacing: -2px;
+  margin: 20px 0 16px;
+}
+
+.post img{
+  max-width: 412px;
+ max-height: 320px;
+}
+
+.post-right p{
+  max-width: 580px;
+  font-family: var(--inter);
+	color: var(--grey);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+
+.post-right h2{
+  color: var(--purple);
+  font-family: var(--inter);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+
+
+
+
+@media(min-width:700px){
+  .headercontainer{
+    grid-template-columns: repeat(2, auto);
   }
-  #navbar-responsive a {
-    text-align: center;
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 28px;
-    color: #ffffff;
+  .headercontainer img{
+    max-width: 251px;
+    max-height: 294px;
+  }
+  .post{
+    grid-template-columns: repeat(2, auto);
+  }
+
+}
+
+
+@media(min-width:1100px){
+  .headercontainer{
+    padding: 0 100px;
+  }
+  .maincontainer{
+    padding: 0 100px;
+  }
+}
+
+@media(min-width:1300px){
+  .headercontainer{
+    padding: 0 130px;
+  }
+  .maincontainer{
+    padding: 0 130px;
+  }
+}
+
+
+
+@media(min-width:1600px){
+  .headercontainer{
+    padding: 0 170px;
+  }
+  .maincontainer{
+    padding: 0 170px;
   }
 }
