--- a/css/policy.css
+++ b/css/policy.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
 
+@import url(nav.css);
+@import url(footer.css);
+
+
 * {
   margin: 0;
   padding: 0;
@@ -30,76 +34,104 @@ input:focus {
 button {
   cursor: pointer;
 }
-.navbar {
+
+:root {
+  --tran: all 0.5s ease;
+  --sen: "Sen", sans-serif;
+  --inter: "Inter", sans-serif;
+  --black: #232536;
+  --yellow: #ffd050;
+  --purple: #592ea9;
+  --darkgrey: #4c4c4c;
+  --grey: #6d6e76;
+  --lightgrey: #f4f4f4;
+  --white: #f4f0f8;
+  --lightyellow: #fbf6ea;
+  --buttonhover: #edc14a;
+  --background: #ffffff;
+}
+
+img {
   width: 100%;
-  height: 80px;
+}
+
+
+#backtop {
   position: fixed;
-  background: #232536;
-  z-index: 10;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  border: 4px solid var(--yellow);
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: var(--background);
 }
 
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
+#backtop a{
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  color: var(--yellow);
 }
 
-.navbar-left {
-  margin-top: 25px;
+
+header{
+  padding: 200px 0 128px;
+  background-color: var(--white);
 }
 
-.navbar-right {
-  display: flex;
-  margin-top: 10px;
+main{
+  padding: 128px 0;
+  background-color: var(--background);
 }
 
-.navbar-right .nav-link {
-  font-family: "Inter", sans-serif;
-  padding-right: 24px;
+.headercontainer{
+
+}
+
+.headercontainer h1{
+  text-align: center;
+  font-family: var(--sen);
+	color: var(--black);
+	font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+  letter-spacing: -2px;
+}
+
+.headercontainer p{
+  text-align: center;
+  font-family: var(--inter);
+	color: var(--grey);
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
-  display: flex;
+}
+
+.maincontainer{
+  display: grid;
+  gap: 32px;
   align-items: center;
-  color: #ffffff;
+  justify-content: center;
 }
 
-.navbar-right-button a button {
-  width: 179px;
-  height: 56px;
-  margin-left: 8px;
-  font-family: "Inter", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  border: none;
-  color: #232536;
+.maincontainer h1{
+  font-family: var(--sen);
+	color: var(--black);
+	font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+  letter-spacing: -2px;
+  max-width: 714px;
 }
 
-.navbar-right-button a button:hover {
-  background: #ffd050;
-  transition: 0.5s;
-}
-
-.toggle {
-  display: none;
-  margin-top: 20px;
-}
-
-.toggle button {
-  width: 40px;
-  height: 40px;
-  margin-left: 10px;
-  font-size: 20px;
-  border: none;
-  color: #2e3040;
-  background: #ffffff;
-}
-
-.toggle button:hover {
-  background: #ffd050;
-  transition: 0.5s;
-}
-
-#navbar-responsive {
-  display: none;
+.maincontainer p{
+  font-family: var(--inter);
+	color: var(--grey);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  max-width: 768px;
 }
