--- a/css/blog.css
+++ b/css/blog.css
@@ -6,8 +6,8 @@
   padding: 0;
   text-decoration: none;
   list-style-type: none;
-  scroll-behavior: auto;
-  transition: all 0.5s ease;
+  scroll-behavior: smooth;
+  transition: 0.5s;
 }
 
 *,
@@ -81,7 +81,7 @@ button {
 }
 
 .navbar-right-button a > button:hover {
-  background: #ffd050;
+  background: #edc14a;
   transition: 0.5s;
 }
 
@@ -101,7 +101,7 @@ button {
 }
 
 .toggle > button:hover {
-  background: #ffd050;
+  background: #edc14a;
   transition: 0.5s;
 }
 
@@ -175,6 +175,11 @@ button {
   font-size: 18px;
   line-height: 24px;
   color: #232536;
+}
+
+.home-left .home-button > button:hover {
+  background: #edc14a;
+  transition: 0.5s;
 }
 
 #slider {
@@ -373,6 +378,11 @@ button {
   line-height: 24px;
 }
 
+.join-button > button:hover {
+  background: #edc14a;
+  transition: 0.5s;
+}
+
 /* footer */
 
 #footer {
@@ -451,6 +461,11 @@ button {
   cursor: pointer;
 }
 
+.footer-input-right form > #submit:hover {
+  background: #edc14a;
+  transition: 0.5s;
+}
+
 .footer-bottom {
   display: flex;
   justify-content: space-between;
@@ -491,7 +506,7 @@ button {
 
 #backtop:hover {
   color: #ffffff;
-  background: #ffd050;
+  background: #edc14a;
   transition: 0.3s;
 }
 
