--- a/css/about.css
+++ b/css/about.css
@@ -28,10 +28,10 @@ nav{
 	transition: var(--tran);
     display: block;
     position: fixed;
-    top: 0;
-	left: -100%;
+    top: -100%;
+    left: 0;
     bottom: 0;
-    height: 100vh;
+    height: 300px;
     width: 100%;
 	text-align: center;
 	background-color:  #232536e4;
@@ -40,10 +40,10 @@ nav{
 
 .uil-multiply{
 	cursor: pointer;
-	padding: 25px 20px;
-	color: var(--white);
-	font-size: 35px;
-	position: absolute;
+    padding: 25px 30px;
+    color: var(--white);
+    font-size: 35px;
+    position: absolute;
     right: 0px;
 }
 
