--- a/css/contact-shahzod.css
+++ b/css/contact-shahzod.css
@@ -149,7 +149,7 @@ h2{
 
 .containers{
     padding-top: 64px;
-    width: 768px;
+    max-width: 768px;
     height: 280px;
     background-color: #592EA9;
     margin: 0 auto;
@@ -243,10 +243,17 @@ h2{
 
 form {
     display: flex;
+    align-items: center;
     margin: 0 auto;
     flex-direction: column;
     gap: 15px;
     margin-bottom: 100px;
+    margin-top: 40px;
+}
+
+.forms {
+  max-width: 768px;
+
 }
 
 form input {
@@ -259,15 +266,21 @@ form input {
 }
 
 input::placeholder {
+  width: 200px;
   font-family: "Inter", sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 16px;
   line-height: 28px;
   color: #232536;
 }
 
-
+#sorovnoma{
+  position: absolute;
+  height: 17px;
+  margin-top: -56px;
+  margin-left: 620px;
+}
 form select {
   max-width: 768px;
   height: 56px;
@@ -300,9 +313,11 @@ form button a {
 }
 
 .tugma {
-    margin: 20px 305px 128px;
+    display: flex;
+    align-items: center;
     padding: 16px 304px;
     background-color: #ffd256;
+    margin-bottom: 80px;
 }
 
 .tugma p {
@@ -319,133 +334,140 @@ line-height: 32px;
 }
 
 footer {
-    background-color: var(--black);
-    
-  }
+  background-color: var(--black);
   
-  .footerlinks {
-    position: absolute;
-    margin-top: -5px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 24px;
-    margin-left: 940px;
-  }
-  
-  .footerlinks a {
-    font-family: var(--inter);
-    color: var(--white);
-    margin-top: 20px;
-  }
-  
-  .footerlinks a:hover {
-    text-decoration: underline;
-  }
-  
-  .footertop img {
-    margin-top: 14px;
-    margin-bottom: 25px;
-    margin-left: 140px;
-    height: 28.35443115234375px;
-    width: 140px;
-  }
-  
-  .footertop {
-    margin-top: 80px;
-    padding: 28px 0px 0px 40px;
-    display: flex;
-    gap: 20px;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  
-  .footer-subscribe {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-column-gap: 100px;
-    align-items: center;
-    width: 100%;
-    height: 256px;
-    margin-bottom: 48px;
-    padding: 0 64px;
-    background: #2e3040;
-  }
-  
-  .footer-subscribe h2 {
-    max-width: 562px;
-    font-family: var(--sen);
-    color: var(--white);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 48px;
-    letter-spacing: -2px;
-  }
-  
-  .footer-form {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 24px;
-  }
-  
-  .footer-form input {
-    font-family: var(--inter);
-    min-width: 100px;
-    max-width: 323px;
-    border: 1px solid #4c4c4c;
-    padding: 14px 20px;
-    background-color: transparent;
-    color: var(--grey);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 28px;
-  }
-  
-  .footer-form button {
-    font-family: var(--sen);
-    border: none;
-    padding: 16px 48px;
-    background-color: var(--yellow);
-    color: var(--black);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 24px;
-  }
-  
-  .footer-form button:hover {
-    background-color: var(--buttonhover);
-  }
-  
-  .footer-bottom {
-    padding: 48px 0 56px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  
-  .footer-bottom-left p {
-    margin-left: 140px;
-    font-family: var(--inter);
-    color: var(--white);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 28px;
-  }
-  
-  .footer-bottom-right {
-    display: flex;
-    gap: 26px;
-    margin-right: 150px;
-    margin-left: 1240px;
-    margin-bottom: -10px;
-  }
-  
-  .footer-bottom-right img {
-    width: 16px;
-    height: 16px;
-  }
+}
+
+.footerlinks {
+  position: absolute;
+  margin-top: -5px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin-left: 940px;
+}
+
+.footerlinks a {
+  font-family: var(--inter);
+  color: var(--white);
+  margin-top: 20px;
+}
+
+.footerlinks a:hover {
+  text-decoration: underline;
+}
+
+.footertop img {
+  margin-top: 14px;
+  margin-bottom: 25px;
+  margin-left: 140px;
+  height: 28.35443115234375px;
+  width: 140px;
+}
+
+.footertop {
+  margin-top: 80px;
+  padding: 28px 0px 0px 40px;
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.footer-subscribe {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-column-gap: 100px;
+  align-items: center;
+  width: 100%;
+  height: 256px;
+  margin-bottom: 48px;
+  padding: 0 64px;
+  background: #2e3040;
+}
+
+.footer-subscribe h2 {
+  max-width: 562px;
+  font-family: var(--sen);
+  color: var(--white);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: -2px;
+}
+
+.footer-form {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.footer-form input {
+  font-family: var(--inter);
+  min-width: 100px;
+  max-width: 323px;
+  border: 1px solid #4c4c4c;
+  padding: 14px 20px;
+  background-color: transparent;
+  color: var(--grey);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.tugma-1{
+  position: absolute;
+  margin: 50px 550px 30px 0px;
+  color: #E5E5E5;
+}
+
+.footer-form button {
+  margin-top: 50px;
+  font-family: var(--sen);
+  border: none;
+  padding: 16px 48px;
+  background-color: var(--yellow);
+  color: var(--black);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.footer-form button:hover {
+  background-color: var(--buttonhover);
+}
+
+.footer-bottom {
+  padding: 48px 0 56px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.footer-bottom-left p {
+  margin-left: 140px;
+  font-family: var(--inter);
+  color: var(--white);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.footer-bottom-right {
+  display: flex;
+  gap: 26px;
+  margin-right: 150px;
+  margin-left: 1240px;
+  margin-bottom: -10px;
+}
+
+.footer-bottom-right img {
+  width: 16px;
+  height: 16px;
+}
 
   @media (max-width: 700px) {
     .containers {
